# node-handshake

./: Cargo.toml  README.md
crates/handshake/: Cargo.toml
crates/handshake/src/: lib.rs
crates/handshake/src/bitcoin/: codec.rs  error.rs  handshake.rs  log.rs  mod.rs  node.rs  types.rs
crates/handshake/src/tests/: codec.rs  handshake.rs  mod.rs
crates/handshake_cli/: Cargo.toml
crates/handshake_cli/src/: cli.rs  main.rs
