[package]
name = "handshake"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcoin = "0.31.2"
futures = "0.3.30"
thiserror = "1.0.59"
tokio = { version = "1.37.0", features = [ "full"] }
tokio-util = { version = "0.7.10", features = ["codec"] }
tracing = "0.1.40"

[dev-dependencies]
futures = "0.3.30"
