[package]
name = "handshake_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.4", features = ["derive"]}
handshake = { path = "../handshake" }
tokio = { version = "1.37.0", features = [ "full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
